[package]
name = "simple-actix-web"
version = "0.1.0"
authors = ["ThomasHinterberger <[Thomas.hinterberger@gmail.com]>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
serde = "1.0.1"
serde_derive = "1"